[gd_scene load_steps=4 format=3 uid="uid://d2a86jgs6wneu"]

[ext_resource type="Theme" uid="uid://cktgypu4e5gpa" path="res://core/screens/pimnet_level/theme/pimnet_theme.tres" id="1_d3gi4"]
[ext_resource type="Script" uid="uid://b4l3845xljv24" path="res://core/screens/pimnet_level/pimnet/memo_slot.gd" id="1_gvg2n"]
[ext_resource type="LabelSettings" uid="uid://r6hdi8lnr2h1" path="res://core/screens/pimnet_level/pimnet/memo_normal_label_settings.tres" id="3_cwmmk"]

[node name="MemoSlot" type="Control"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 3
anchors_preset = 0
offset_right = 70.0
offset_bottom = 70.0
theme = ExtResource("1_d3gi4")
theme_type_variation = &"MemoSlot"
script = ExtResource("1_gvg2n")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = ExtResource("3_cwmmk")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
